@@ -4,21 +4,19 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_POPULAR_ITEMS="Popular Items"
 MOD_POPULAR_CREATED="Created"
 MOD_POPULAR_HITS="Hits"
+MOD_POPULAR_ITEMS="Popular Items"
 MOD_POPULAR_NO_MATCHING_RESULTS="No Matching Results"
+MOD_POPULAR_XML_DESCRIPTION="This Module shows a list of the most popular published Articles that are still current. Some that are shown may have expired even though they are the most recent."
 
 ; Params
-MOD_POPULAR_DESC="This Module shows a list of the most popular published Articles that are still current. Some that are shown may have expired even though they are the most recent."
-MOD_POPULAR_COUNT_LABEL="Count"
-MOD_POPULAR_COUNT_DESC="The number of items to display (default 5)"
-MOD_POPULAR_ORDERING_LABEL="Order"
-MOD_POPULAR_ORDERING_DESC="Ordering options"
+MOD_POPULAR_FIELD_AUTHORS_LABEL="Authors"
+MOD_POPULAR_FIELD_AUTHORS_DESC="A filter for the Authors"
 MOD_POPULAR_FIELD_CATEGORY_LABEL="Category"
 MOD_POPULAR_FIELD_CATEGORY_DESC="Select Articles from a specific Category or set of Categories."
-MOD_POPULAR_AUTHORS_LABEL="Authors"
-MOD_POPULAR_AUTHORS_DESC="A filter for the Authors"
-MOD_POPULAR_ANYONE="Anyone"
-MOD_POPULAR_ADDED_OR_MODIFIED_BY_ME="Added or modified by me"
-MOD_POPULAR_NOT_ADDED_OR_MODIFIED_BY_ME="Not added or modified by me"
+MOD_POPULAR_FIELD_COUNT_LABEL="Count"
+MOD_POPULAR_FIELD_COUNT_DESC="The number of items to display (default 5)"
+MOD_POPULAR_FIELD_VALUE_ANYONE="Anyone"
+MOD_POPULAR_FIELD_VALUE_ADDED_OR_MODIFIED_BY_ME="Added or modified by me"
+MOD_POPULAR_FIELD_VALUE_NOT_ADDED_OR_MODIFIED_BY_ME="Not added or modified by me"
